# makassar-ml

./: .gitignore  CITATIONS.bib  Pipfile  README.md  docker-compose.yml  environment.yaml  environment.yml  pyproject.toml  references.md  requirements.txt
jupyter/: README.md  encoding.ipynb  fot.ipynb  fut_image_timeseries_classifier.ipynb  fut_image_timeseries_multitask.ipynb  fut_image_timeseries_regression.ipynb  inceptionv3.ipynb  learning_rate_schedules.ipynb  lstm.ipynb  model_comparison.ipynb  model_features.ipynb  model_playground.ipynb  playground.ipynb  playground_beijing_pm25.ipynb  playground_data_fusion.ipynb  playground_transformer.ipynb  run_vscode.ipynb  test_mkml.ipynb  timeseries_transformer_beijing_pm25.ipynb  toy_dataset.ipynb  transformer_forecast_beijing_pm25.ipynb  tune_fot.ipynb  visdata_beijingpm25.ipynb  visdata_fusion.ipynb  visdata_plantvillage.ipynb  vit.ipynb
makassar_ml/: __init__.py  callbacks.py  learning_rate_schedule.py  schedules.py  time2vec.py  training.py  tuning.py  visualization.py  yaml.py
makassar_ml/dataset/: beijing_pm25.py
makassar_ml/datasets/: __init__.py  beijing_multisite_air_quality.py  beijing_pm25.py  beijingpm25.py  csv_timeseries.py  fused_plant_village_beijingpm25_classification.py  fused_plant_village_beijingpm25_multitask.py  fused_plant_village_beijingpm25_regression.py  lt_beijing_pm25.py  plant_village.py  timeseries_forecast_wrapper.py  utility.py
makassar_ml/layers/: __init__.py  fusion.py  patch_encoder.py  (+5 more)
scripts/: config.yml  run_python.sh  train_beijingpm25.py  transformer_time2vec_encoder_pool_fc.yml  tune.py
tests/: test_dataset.py  test_datasets.py  test_time2vec.py
training_configs/: transformer_time2vec_encoder_pool_fc.yml
tuning_configs/: fot.yml  fut_image_timeseries_classifier.yml  fut_image_timeseries_multitask.yml  fut_image_timeseries_regression.yml  lstm_net.yml  transformer_linearembedding_linearencoding_encoder_flatten_fc.yml  transformer_simple.yml  transformer_time2vec_encoder_flatten_fc.yml  transformer_time2vec_encoder_pool_fc.yml  transformer_time2vec_linearencoding_encoder_flatten.yml  transformer_time2vec_relpos.yml  vit.yml
(+21 files in other folders)
