[project]
name = "makassar-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander DeRieux", email = "alexander.derieux@gmail.com"},
]
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "torchvision",
    "tqdm",
    "requests",
    "pytorch-lightning",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel",
    "jupyterthemes",
    "pytest",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
