[project]
name = "makassar-ml"
version = "1.0.2"
description = ""
authors = [
    {name = "Alexander DeRieux", email = "alexander.derieux@gmail.com"},
]
dependencies = [
    "keras-tuner",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "seaborn",
    "tensorflow-datasets",
    "tensorflow",
    "tqdm",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[project.urls]
homepage = "https://github.com/news-vt/makassar-ml"

[build-system]
requires = ["setuptools", "cython"]

[project.optional-dependencies]
tests = [
    'pytest',
]
dev = [
    'ipykernel',
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]